# circlyapp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING_GUIDE.md  docker-compose.yml  todo.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db
backend/app/: __init__.py  config.py  database.py  dependencies.py  deps.py  main.py
backend/app/api/v1/: __init__.py  auth.py  circles.py  notifications.py  polls.py  templates.py  test_utils.py  users.py
backend/app/core/: __init__.py  celery.py  constants.py  database.py  enums.py  exceptions.py  models.py  rate_limit.py  responses.py  security.py  supabase.py
backend/app/models/: __init__.py  auth_models.py  circle.py  notification.py  poll.py  question_template.py  user.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/circles/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/polls/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/schemas/: __init__.py  auth.py  circle.py  notification.py  poll.py  question_template.py  user.py
backend/app/services/: __init__.py  expo_push.py  notification_service.py  poll_service.py  question_template_service.py
backend/app/tasks/: celery_app.py  notification_tasks.py
backend/app/utils/: __init__.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 14903dfffd85_add_voter_id_to_votes_table_for_god_mode.py  1985f846af23_add_is_orb_mode_to_users.py  2dae34b28d24_create_reports_table.py  35c86b00d852_add_broadcast_logs_table.py  48f2903cb7ea_fix_poll_schema_to_match_models.py  59137d97d99f_create_users_table.py  6e393d8896f8_add_notification_settings_to_users.py  6fe99469a1eb_add_webhook_events_table.py  880fa24bac0b_create_notifications_table.py  8816145500c0_make_username_nullable.py  88fffa2c6e9b_create_circles_tables.py  973842ece436_initial_migration.py  a1b2c3d4e5f6_supabase_auth_migration.py  add_extended_auth_system.py  add_push_notification_models.py  b7c9d2e1f4a6_create_vote_sessions_table.py  c0d1e2f3a4b5_add_coin_balance_and_streak_to_users.py  d0e1f2a3b4c5_add_gender_and_age_group_to_users.py  d4e5f6a7b8c9_create_received_heart_reads_table.py  ddf3fccfd9b9_add_user_role_column.py  de9545f81b89_create_polls_tables.py  e6f7a8b9c0d1_add_next_session_at_to_users.py  f1a2b3c4d5e6_add_invite_code_expiration.py  f7a8b9c0d1e2_create_vote_hints_table.py
backend/scripts/: seed_data.py  seed_templates.py
backend/tests/: __init__.py  conftest.py  conftest_async.py  test_auth.py  test_basic.py  test_circles.py  test_polls.py  test_question_templates.py
backend/tests/e2e/: test_poll_scenarios.py
backend/tests/integration/: __init__.py  test_circle_flow.py  test_poll_api.py  test_poll_flow.py
backend/tests/tasks/: test_notification_tasks.py
backend/tests/unit/: test_poll_service.py
docs/: DSL.md
(+403 files in other folders)
